[gd_scene load_steps=2 format=1]

[ext_resource path="res://main_menu/multi_menu/multi_menu.gd" type="Script" id=1]

[node name="multi_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 210.0
margin/bottom = 410.0

[node name="button_local_game" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 94.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Local game"
flat = false

[node name="button_network_game" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 60.0
margin/right = 117.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Network Game"
flat = false

[node name="button_back" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 160.0
margin/right = 52.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="panel/button_local_game" to="." method="_on_button_local_game_pressed"]

[connection signal="pressed" from="panel/button_network_game" to="." method="_on_button_network_game_pressed"]

[connection signal="pressed" from="panel/button_back" to="." method="_on_button_back_pressed"]


